Upgrade and normalize line-endings